# bnmf-algs

./: .clang-format  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  build.config  build.sh  main_file_factorization.cpp  set_travis_build_options.sh
.github/: ISSUE_TEMPLATE.md
benchmark/: bench_utils.cpp  bench_utils.hpp  benchmark.cpp  bld_add_benchmark.cpp  bld_add_benchmark.hpp  bld_appr_benchmark.cpp  bld_appr_benchmark.hpp  bld_mult_benchmark.cpp  bld_mult_benchmark.hpp  bld_mult_cuda_benchmark.hpp  collapsed_gibbs_benchmark.cpp  collapsed_gibbs_benchmark.hpp  collapsed_icm_benchmark.cpp  collapsed_icm_benchmark.hpp  nmf_benchmark.cpp  nmf_benchmark.hpp  nmf_seq_greedy_bld_matrix_elems.cpp  nmf_seq_greedy_bld_matrix_elems_benchmark.hpp  online_EM_benchmark.hpp  psi_appr_benchmark.hpp  seq_greedy_bld_benchmark.cpp  seq_greedy_bld_benchmark.hpp  swimmer_benchmark.hpp
cuda_src/: tensor_ops.cu  tensor_ops_kernels.cu
cuda_src/bld_mult/: bld_mult_cuda_funcs.cu  bld_mult_cuda_kernels.cu
doc/: Doxyfile  Makefile  conf.py  index.rst  references.bib
example/: CMakeLists.txt  build.sh  main_file_factorization.cpp
example_with_cuda/: CMakeLists.txt  build.sh  main_file_factorization.cpp
include/: alloc_model_params.hpp  bnmf_algs.hpp  decomposition.hpp  defs.hpp  library.hpp  nmf.hpp  sampling.hpp  util.hpp  wrappers.hpp
include/alloc_model/: alloc_model_funcs.hpp  alloc_model_params.hpp
include/allocation_model/: alloc_model_funcs.hpp  alloc_model_params.hpp  sampling.hpp
include/bld/: bld_algs.hpp
include/cuda/: memory.hpp  tensor_ops.hpp  tensor_ops_kernels.hpp
include/nmf/: nmf.hpp
include/util/: generator.hpp  sampling.hpp  util.hpp  wrappers.hpp
movielens/: CMakeLists.txt  movielens.cpp
scripts/: celero_to_latex.py  celero_to_markdown.sh  massif_to_matplotplib.py
src/: alloc_model_params.cpp  bnmf_algs.cpp  bnmf_algs.hpp  decomposition.cpp  defs.hpp  library.cpp  main.cpp  main_cuda.cpp  main_nmf_on_file.cpp  nmf.cpp  sampling.cpp  wrappers.cpp
src/alloc_model/: alloc_model_funcs.hpp  alloc_model_params.cpp  alloc_model_params.hpp
src/allocation_model/: alloc_model_funcs.cpp  alloc_model_params.cpp  sampling.cpp
src/bld/: bld_add.hpp  bld_algs.cpp  bld_algs.hpp  bld_appr.hpp  bld_fact.hpp  collapsed_icm.hpp  seq_greedy_bld.hpp  util_details.hpp
src/bld/EM/: online_EM_defs.hpp  online_EM_funcs.hpp  standard_EM.hpp
src/bld/algorithm/: bld_mult.hpp  collapsed_gibbs.hpp  util_details.hpp
src/bld/bld_mult/: bld_mult.hpp  bld_mult_cuda_funcs.hpp  bld_mult_cuda_kernels.hpp  bld_mult_funcs.hpp
src/bld/online_EM/: online_EM.hpp  online_EM_defs.hpp  online_EM_funcs.hpp
src/cuda/: cuda_kernel.cu  main_cuda.cpp  memory.hpp  tensor_ops.cu  tensor_ops.hpp  tensor_ops_kernels.cu  tensor_ops_kernels.hpp  util.hpp
src/cuda/memory/: copy.hpp  device_memory_1d.hpp  device_memory_2d.hpp  device_memory_3d.hpp  host_memory_1d.hpp  host_memory_2d.hpp  host_memory_3d.hpp
src/nmf/: nmf.cpp  nmf.hpp
src/util/: generator.hpp  sampling.cpp  sampling.hpp  util.cpp  util.hpp  wrappers.cpp
test/: ctor_dtor_counter.hpp  test_alloc_model_params.cpp  test_bnmf_algs.cpp  test_decomposition.cpp  test_example.cpp  test_nmf.cpp  test_sampling.cpp  test_util.cpp  test_wrappers.cpp
test/allocation_model/: test_alloc_model_funcs.cpp  test_alloc_model_params.cpp  test_sampling.cpp
test/bld/: test_bld_algs.cpp
test/bld/EM/: test_online_EM.cpp
test/bld/bld_mult/: test_bld_mult.cpp  test_bld_mult_cuda.cpp  test_bld_mult_cuda_funcs.cpp  test_bld_mult_funcs.cpp
test/bld/online_EM/: test_online_EM.cpp
test/cuda/: test_memory.cpp  test_tensor_ops.cpp  test_util.cpp
test/nmf/: test_nmf.cpp
test/util/: test_generator.cpp  test_sampling.cpp  test_util.cpp  test_wrappers.cpp
